test/error/error.input33.zc
Incompatible types to return on line 4
